--- a/views/index.twig
+++ b/views/index.twig
@@ -31,15 +31,7 @@
 </head>
 
 <body>
-<!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-T6CDFF"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-T6CDFF');</script>
-<!-- End Google Tag Manager -->
+
     <div class="container">
         <div class="row">
             <div class="col s12">
@@ -51,7 +43,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
                 <div class="col s12 m7">
                 <p>
-                    Ad Here
+                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <!-- materialize.khophi.co -->
+                    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3447974026628607" data-ad-slot="4939692779" data-ad-format="auto"></ins>
+                    <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                    </script>
                 </p>
                 </div>
             </div>
@@ -159,7 +156,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     </div>
                     <div class="col s12" style="margin-top:20px;">
                         <!-- <input type="submit" class="btn waves-effect waves-light"> -->
-                        <button type="submit" formtarget="new" class="btn waves-effect waves-light">Download Custom</button>
+                        <button type="submit" class="btn waves-effect waves-light">Download Custom</button>
                     </div>
                 </div>
             </form>
