--- a/views/index.twig
+++ b/views/index.twig
@@ -5,7 +5,7 @@
     <base href="/">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Customize your MaterializeCSS and Download instantly!">
+    <meta name="description" content="Customize MaterializeCSS and Download. Pick and choose the features you want or have the whole enchilada.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Custom Download MaterializeCSS</title>
     <meta name="description" content="Customize MaterializeCSS and Download. Pick and choose the features you want or have the whole enchilada.">
@@ -24,7 +24,7 @@
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <!-- <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png"> -->
     <meta name="msapplication-TileColor" content="#3372DF">
-    <!-- <link rel="shortcut icon" href="images/favicon.png"> -->
+    <link rel="shortcut icon" href="favicon.png">
     <!-- CSS  -->
     <link rel="stylesheet" href="./vendor/materialize/dist/css/materialize.min.css">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
