--- a/views/index.twig
+++ b/views/index.twig
@@ -31,7 +31,6 @@
 </head>
 
 <body>
-
     <div class="container">
         <div class="row">
             <div class="col s12">
@@ -52,6 +51,15 @@
                 </p>
                 </div>
             </div>
+            {% if error %}
+            <div class="row">
+                <div class="col s12">
+                    <div class="center-text">
+                        {{ error }} happening at {{ line }}
+                    </div>
+                </div>
+            </div>
+            {% endif %}
             <form action="/" method="post" id="form">
                 <div class="col s12">
                     <p style="margin-left:12px;">
