--- a/views/index.twig
+++ b/views/index.twig
@@ -164,7 +164,7 @@
                     </div>
                     <div class="col s12" style="margin-top:20px;">
                         <!-- <input type="submit" class="btn waves-effect waves-light"> -->
-                        <button type="submit" onclick="ga('send', 'button', 'CSS', 'download', 'Download Materialize');" class="btn waves-effect waves-light">Download Custom</button>
+                        <button type="submit" onclick="ga('send', 'event', 'CustomDownload', 'BuildButtonPressed', 'DownloadButton');" class="btn waves-effect waves-light">Download Custom</button>
                     </div>
                 </div>
             </form>
