--- a/views/index.twig
+++ b/views/index.twig
@@ -53,9 +53,9 @@
             </div>
             {% if error %}
             <div class="row">
-                <div class="col s12">
-                    <div class="center-text">
-                        {{ error }} happening at {{ line }}
+                <div class="col s12 m6 offset-m3">
+                    <div class="center-text red-text">
+                        {{ error }}
                     </div>
                 </div>
             </div>
