update to about and readme

--- a/views/index.twig
+++ b/views/index.twig
@@ -177,14 +177,14 @@
             <div class="card-content">
               <span class="card-title" id="about">About Custom Materialize Download</span>
               <p>
-                This website allows you to customize your MaterializeCSS before you download based on the most stable version.
+                This website allows you to customize your <a href="http://materializecss.com">MaterializeCSS</a> before you download based on the most stable version.
               </p>
               <p>
-                  Check the Sass modules you wish to download and use in your project and press the "Download Build" button.
+                  Check enable the Sass modules you wish to download and use in your project and press the "Download Custom" button.
               </p>
-              <span class="card-title">Which Materialize Version</span>
+              <span class="card-title">Which Materialize Version?</span>
               <p>
-                  Current build version is the most stable version of MaterializeCSS. A cron task updates the local repo everyday, ensuring your custom builds are always the latest and most stable.
+                  Any custom CSS downloaded from here is from the latest stable release of MaterializeCSS. A cron task updates the local repo everyday, ensuring your custom builds are always the freshes, latest and most stable.
               </p>
               <span class="card-title">What Modules are included by default?</span>
               <p>
@@ -201,15 +201,18 @@
                   </ul>
               </p>  
               <p>
-                  Any additional checkboxes will be added to the above variables.
+                  Any additional checkboxes you enable will be added to the above variables.
               </p>
               <span class="card-title">Why are Custom Builds important?</span>
               <p>
-                  Minimal features and file size. Perhaps you are interested in using Material Design for a your site, but do not want anything else. Building specifically to target these needs ensures you end up with a minimal file size, and less CSS conflicts within your project.
+                  <strong>Minimal features and file size:</strong> Perhaps you are interested in using <a href="https://material.google.com/">Material Design</a> for a your site, but do not want to overwhelme your design with unnecessary aspects of MaterializeCSS such as buttons or forms.
+              </p>
+              <p>
+                Building specifically to target these needs ensures you end up with a minimal file size, and less CSS conflicts within your project.
               </p>
               <br/>
               <p>
-                  I always enjoy using Foundation for Sites Custom project downloader. I enjoy using Materialize CSS, so in order to help me build custom CSS files easily for my projects in a GUI manner, I 'Weekend-thon' this Material Custom website.
+                  I always enjoy using <a href="http://foundation.zurb.com/sites/download.html/">Foundation for Sites Custom project downloader</a>. I enjoy using Materialize CSS, so in order to help me build custom CSS files easily for my projects in a GUI manner, I 'Weekend-thon' this Material Custom website.
               </p>
               <br>
               <p>
