--- a/views/index.twig
+++ b/views/index.twig
@@ -15,32 +15,20 @@
     <meta name="twitter:description" content="Customize MaterializeCSS and Download. Pick and choose the features you want or have the whole enchilada.">
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <!-- <link rel="icon" sizes="192x192" href="images/android-desktop.png"> -->
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Custom MaterializeCSS">
-    <!-- <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png"> -->
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <!-- <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png"> -->
     <meta name="msapplication-TileColor" content="#3372DF">
     <link rel="shortcut icon" href="favicon.png">
     <!-- CSS  -->
     <link rel="stylesheet" href="./vendor/materialize/dist/css/materialize.min.css">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
 </head>
 
 <body>
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <div class="col s12 m5">
-                    <h3 class="flow-text">Customize MaterializeCSS <br/> and Download <small>(beta)</small></h3>
-                    <p>
-                        <a class="center-align" href="#about">About & FAQ</a>
-                    </p>
-                </div>
-                <div class="col s12 m7">
                 <p>
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <!-- materialize.khophi.co -->
@@ -49,7 +37,12 @@
                     (adsbygoogle = window.adsbygoogle || []).push({});
                     </script>
                 </p>
-                </div>
+            </div>
+            <div class="col s12 m">
+                <h3 class="flow-text">Customize MaterializeCSS <br/> and Download <small>(beta)</small></h3>
+                <p>
+                    <a class="center-align" href="#about">About & FAQ</a>
+                </p>
             </div>
             {% if error %}
             <div class="row">
