fixed typo. Changed Slider to Dropdown

--- a/views/index.twig
+++ b/views/index.twig
@@ -141,7 +141,7 @@
                         </p>
                         <p>
                             <input type="checkbox" class="filled-in" id="dropdown" name="dropdown" />
-                            <label for="dropdown">Slider</label>
+                            <label for="dropdown">Dropdown</label>
                         </p>
                     </div>
                     <div class="col m4">
