fixed static bad references

--- a/views/index.twig
+++ b/views/index.twig
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#3372DF">
     <link rel="shortcut icon" href="favicon.png">
     <!-- CSS  -->
-    <link rel="stylesheet" href="./vendor/materialize/dist/css/materialize.min.css">
+    <link rel="stylesheet" href="../public/vendor/materialize/dist/css/materialize.min.css">
 </head>
 
 <body>
@@ -224,8 +224,8 @@
           </div>
     </div>
 </body>
-<script src="./vendor/jquery/dist/jquery.min.js"></script>
-<script src="./vendor/materialize/dist/js/materialize.min.js"></script>
+<script src="../public/vendor/jquery/dist/jquery.min.js"></script>
+<script src="../public/vendor/materialize/dist/js/materialize.min.js"></script>
 <script>
 $(document).ready(function() {
 
