showing temporal message as I try to fix error

--- a/views/index.twig
+++ b/views/index.twig
@@ -28,10 +28,15 @@
 <body>
     <div class="container">
         <div class="row">
+            <p class="lead">
+                Temporally down. Should be up soon.
+            </p>
+        </div>
+        <!-- <div class="row">
             <div class="col s12">
                 <p>
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                    <!-- materialize.khophi.co -->
+                    <!-- materialize.khophi.co -
                     <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-3447974026628607" data-ad-slot="4939692779" data-ad-format="auto"></ins>
                     <script>
                     (adsbygoogle = window.adsbygoogle || []).push({});
@@ -156,14 +161,15 @@
                         </p>
                     </div>
                     <div class="col s12" style="margin-top:20px;">
-                        <!-- <input type="submit" class="btn waves-effect waves-light"> -->
+                        <! <input type="submit" class="btn waves-effect waves-light"> -
                         <button type="submit" onclick="ga('send', 'event', 'CustomDownload', 'BuildButtonPressed', 'DownloadButton');" class="btn waves-effect waves-light">Download Custom</button> 
                         <input type="checkbox" class="filled-in" id="minify" name="minify" />
                         <label for="minify">Minify for me</label>
                     </div>
                 </div>
             </form>
-        </div>
+        </div> -->
+
     <div class="divider"></div>
     <div class="row">
         <div class="card">
